# infra-risk-vis

./: .env.example  .eslintrc.js  .gitignore  AUTHORS.txt  LICENSE  Makefile  README.md  TODO.md  TODO.txt  archive-data.sh  compose-local.yml  compose.yml  config.json  convert.sh  deploy.sh  docker-compose-deploy.yaml  docker-compose-dev.yaml  docker-compose-prod-build.yaml  docker-compose-prod-deploy.yaml  docker-compose-prod.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  package-lock.json  package.json  provision.sh  requirements.txt  tmp.html  tsconfig-typings.json  tsconfig.json
.devcontainer/: devcontainer.json
api/: Dockerfile
backend/: Dockerfile  Pipfile  README.md  requirements.txt
containers/backend/: .env.example  Dockerfile  Pipfile  README.md  benchmark_pixel_driller.py  create_schema.py  pyproject.toml  setup.py
containers/backend/backend/: config.py  create_schema.py  workers.py
containers/backend/backend/app/: dependencies.py  exceptions.py  main.py  schemas.py
containers/backend/backend/app/internal/: attribute_access.py  dynamic_data_config.py  helpers.py
containers/backend/backend/app/internal/tiles/: singleband.py
containers/backend/backend/app/routers/: attributes.py  colormap.py  features.py  metrics.py  pixel_driller.py  tiles.py
containers/backend/backend/db/: database.py  debug_query.py  metrics.py  models.py
containers/metrics/: Dockerfile  README.md  pyproject.toml  requirements.txt
containers/metrics/api/: create_schema.py  main.py
containers/metrics/api/database/: database.py  gdl.py
containers/metrics/api/routers/: gdl.py  routes.py  utils.py
containers/metrics/api/schemas/: gdl.py  geometry.py
data/: config.json
deploy/: .gitignore  README.md  copy_all.sh  deploy.sh  drop_all.sh  main.tf  provision-database-server.sh  provision.sh  reload_db.sh  upgrade_terracotta_metadata_0.7.5_0.8.3.sql
design/: API.md
etl/: DESIGN.md  Dockerfile  README.md  Snakefile  Snakefile_orig  adaptation_files.csv  config.yml  damage_exp_files.csv  damage_rp_files.csv  damage_rp_files_with_buildings.csv  database.smk  environment.yml  etl_test.py  hazard_layers.csv  hazard_layers_failing.csv  hazard_layers_full.csv  load_rail.sh  load_rail_exp.sh  load_rail_rp.sh  load_stations.sh  load_stations_exp.sh  load_stations_rp.sh  network_layers.csv  network_tilelayers.csv  network_tilelayers_with_buildings.csv  other_tilelayers.csv  process_regions.sh  raster_processing.smk  run.sh  run_all.sh  scratch_notes.md
frontend/: Dockerfile  package.json
mounts/: archive-data.sh
public/: assembly.v0.18.0.min.css  index.html  mapbox-gl.v0.39.1.css
scripts/: convert_flooding.sh  convert_roads.sh  files_to_json_for_vis.py  join_admin.sh
src/: App.js  App.jsx  App.tsx  BackgroundControl.jsx  BackgroundControl.tsx  FeatureSidebar.jsx  FeatureSidebar.tsx  FloodControl.jsx  FloodControl.tsx  FloodHelp.jsx  Help.jsx  Help.tsx  IntroPage.tsx  Map.jsx  Map.tsx  MapPage.tsx  MapView.tsx  Nav.js  Nav.jsx  Nav.tsx  NetworkControl.jsx  NetworkControl.tsx  Notice.tsx  PageIntro.jsx  PageIntro.tsx  PositionControl.js  PositionControl.jsx  PositionControl.tsx  RegionSummary.jsx  RegionSummary.tsx  RiskControl.jsx  (+12 more)
(+1145 files in other folders)
