[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gri-backend"
version = "0.5.0"
description = "GRI API Backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = ["Framework :: FastAPI", "Programming Language :: Python :: 3"]
dependencies = [
    "fastapi==0.115.6",
    "fastapi-pagination==0.12.32",
    "geoalchemy2==0.17.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "sqlalchemy==2.0.37",
    "setuptools==75.5.0",
    "terracotta==0.8.3",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = ["types-sqlalchemy"]

[tool.pyright]
exclude = ["venv", ".venv"]
