[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gri-backend"
version = "0.4.1"
description = "GRI API Backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = ["Framework :: FastAPI", "Programming Language :: Python :: 3"]
dependencies = [
    "fastapi==0.115.5",
    "fastapi-pagination==0.12.32",
    "geoalchemy2==0.16.0",
    "orjson",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "pyproj",
    "sqlalchemy==2.0.36",
    "setuptools==78.1.1",
    "terracotta==0.8.3",
    "uvicorn==0.32.0",
    "xarray",
    "zarr",
]

[project.optional-dependencies]
dev = ["types-sqlalchemy", "aiohttp"]

[tool.pyright]
exclude = ["venv", ".venv"]
