[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gri-metrics"
version = "0.0.1"
description = "GRI Metrics API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = ["Framework :: FastAPI", "Programming Language :: Python :: 3"]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "fastapi==0.115.6",
    "GeoAlchemy2==0.17.0",
    "h11==0.14.0",
    "idna==3.10",
    "packaging==24.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pydantic_core==2.27.2",
    "python-dotenv==1.0.1",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.37",
    "starlette==0.41.3",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = ["types-sqlalchemy"]

[tool.pyright]
exclude = ["venv", ".venv"]